Project

General

Profile

Actions

Bug #24589

closed

rgw: meta and data notify thread miss stop cr manager

Added by Tianshan Qu almost 6 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic, luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

rgw restrat or reload will stuck in RGWCompletionManager::get_next()


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #24693: luminous: rgw: meta and data notify thread miss stop cr managerResolvedNathan CutlerActions
Copied to rgw - Backport #24702: mimic: rgw: meta and data notify thread miss stop cr managerResolvedNathan CutlerActions
Actions #2

Updated by Kefu Chai almost 6 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Tianshan Qu
Actions #3

Updated by Yehuda Sadeh almost 6 years ago

  • Status changed from Fix Under Review to 7
  • Backport set to mimic, luminous
Actions #4

Updated by Casey Bodley almost 6 years ago

  • Status changed from 7 to Pending Backport
Actions #5

Updated by Patrick Donnelly almost 6 years ago

  • Copied to Backport #24693: luminous: rgw: meta and data notify thread miss stop cr manager added
Actions #6

Updated by Patrick Donnelly almost 6 years ago

  • Copied to Backport #24702: mimic: rgw: meta and data notify thread miss stop cr manager added
Actions #7

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF