rgw: fix meta and data notify thread miss stop cr manager

rgw restrat or reload will stuck in RGWCompletionManager::get_next()

fixes: http://tracker.ceph.com/issues/24589

Signed-off-by: Tianshan Qu <tianshan@xsky.com>
(cherry picked from commit 52c22fa9c8ba5d782574625e541f9f2f872d2ce5)